# squeeze-us-screener

./: CONCLUSION.md  DOCS.md  README.md  ccj_analysis.py  enhance_photo.py  pyproject.toml  recommendations.csv  squeeze.md  squeeze.py  upscale_4x.py
.github/workflows/: daily_scan.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
FRM/: README.md  dflash_gui.py  dflash_to_eee.py  generate_test_bin.py
research/: debug_plot.py  legacy_squeeze.md
scripts/: analyze_tracking.py  run_backtest.py
squeeze/: DOCS.md  README.md  pyproject.toml  recommendations.csv
squeeze/.planning/: STATE.md  config.json
squeeze/.planning/phases/01-core-engine/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md
squeeze/.planning/phases/02-screener-logic/: 02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
squeeze/.planning/phases/03-reporting-visualization/: 03-01-SUMMARY.md  03-02-PLAN.md  03-RESEARCH.md  03-VALIDATION.md
squeeze/.planning/phases/04-automation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-RESEARCH.md
squeeze/.planning/phases/05-refinement-fundamentals/: 05-01-PLAN.md  05-02-SUMMARY.md  05-04-PLAN.md  05-RESEARCH.md  05-VALIDATION.md
squeeze/exports/2026-03-18/: scan_results_183716.csv  scan_results_183716.json  scan_summary_183716.md
squeeze/exports/2026-03-20/: scan_results_014647.csv  scan_results_014647.json  scan_results_020122.csv  scan_results_020122.json  scan_results_021838.csv  scan_results_021838.json  scan_results_113544.csv  scan_results_113544.json  scan_results_115052.csv  scan_results_115052.json  scan_summary_014647.md  scan_summary_020122.md  scan_summary_021838.md  scan_summary_113544.md  scan_summary_115052.md
squeeze/research/: check_yfinance.py
squeeze/src/squeeze/: __main__.py  cli.py
squeeze/src/squeeze/data/: downloader.py  fundamentals.py  tickers.py
squeeze/src/squeeze/engine/: indicators.py  patterns.py  ranker.py  scanner.py
squeeze/src/squeeze/report/: exporter.py  notifier.py  performance.py
squeeze/src/squeeze/report/templates/: summary.md.j2
squeeze/tests/: conftest.py
squeeze/tests/integration/: test_automation.py  test_cli_reporting.py  test_download.py  test_fundamentals_integration.py  test_scanner.py  test_tickers.py  test_visualizer.py
squeeze/tests/unit/: test_exporter.py  test_fundamentals.py  test_indicators.py
src/squeeze/: cli.py
tests/: conftest.py
(+252 files in other folders)
